hphp/hack/test/typecheck/reactive/mutable_or_immutable1.php.exp
File "mutable_or_immutable1.php", line 4, characters 3-16:
The `__MaybeMutable` attribute cannot be used on a function. (Typing[4231])
